--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
  <version>3.141.59</version>
 </dependency> 
 
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>3.1.5</version>
+</dependency>
+
 </dependencies>
 
 <build>
